export class Barbarian {
  username: string;

  constructor(username: string) {
    this.username = username;
  }
}
